--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Shoppr2</title>
-	<link rel="stylesheet" href="./style.css">
+	<title>Shoper2</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<div id="root"></div>
-	<script src="./App.js"></script>
 </body>
 </html>
